# SleepMonitor

./: CMakeLists.txt  CommSetWnd.pro  ContralDataWidget.cpp  ContralDataWidget.h  ContralDataWidget.pro  ContralDataWidget.pro.autosave  ContralDataWidget.pro.user.4.10-pre1  ControlWnd.cpp  ControlWnd.h  ControlWnd.pro  ControlWnd.pro.user.c8804ef  ControlWnd.ui  README.md  SleepInterventionWidget.pro  SleepMonitor.pro  commsetwidget.cpp  commsetwidget.h  commsetwidget.ui  controldata.cpp  controldata.h  dynamicplot.cpp  dynamicplot.h  dynamicplot.ui  eegwnd.cpp  eegwnd.h  eegwnd.ui  filepath.cpp  filepath.h  filepath.ui  helpers.cpp  helpers.h  magnifywindow.cpp  magnifywindow.h  magnifywindow.ui  main.cpp  myenumpropertymanager.cpp  myenumpropertymanager.h  mytracer.cpp  mytracer.h  outputwnd.ui  (+22 more)
ControlWnd/: ControlWnd.cpp  ControlWnd.h  ControlWnd.ui  commsetwidget.cpp  commsetwidget.h  controldata.h  sensordata.cpp  sensordata.h  sleepinterventionwidget.ui
curvegroup/: CMakeLists.txt  README.md
curvegroup/CurveWnd/: CMakeLists.txt
curvegroup/CurveWnd/maxwidget/: CMakeLists.txt
curvegroup/CurveWnd/maxwidget/CurveProperty/: CMakeLists.txt
curvegroup/CurveWnd/maxwidget/CurveProperty/src/: curveconfig.cpp  curveconfig.h  curveproperty.cpp  curveproperty.h
curvegroup/CurveWnd/maxwidget/src/: maxwidget.cpp  maxwidget.h
curvegroup/CurveWnd/src/: curvewnd.cpp  curvewnd.h  lineseries.cpp  lineseries.h
curvegroup/CurveWnd/test/: lib_test.cpp
curvegroup/src/: curvegroup.cpp  curvegroup.h  seriespoint.cpp  seriespoint.h
curvegroup/test/: main.cpp
(+21 files in other folders)
